--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.7.2",
     "react-icons": "4.1.0",
+    "react-loader-spinner": "3.1.14",
     "react-particles-js": "3.4.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
