--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.11.2",
     "@reduxjs/toolkit": "1.4.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.2",
@@ -25,10 +26,12 @@
     "chalk": "4.1.0",
     "chart.js": "2.9.4",
     "cross-env": "7.0.2",
+    "dotenv": "8.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
     "fontfaceobserver": "2.1.0",
+    "formik": "2.2.6",
     "husky": "4.2.5",
     "i18next": "19.7.0",
     "i18next-browser-languagedetector": "6.0.1",
@@ -67,7 +70,8 @@
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "9.0.0",
     "typescript": "4.0.5",
-    "web-vitals": "0.2.4"
+    "web-vitals": "0.2.4",
+    "yup": "0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
