--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/testing-library__jest-dom": "5.9.2",
     "@types/webpack": "4.41.22",
     "@types/webpack-env": "1.15.2",
+    "aos": "3.0.0-beta.6",
     "axios": "0.21.0",
     "bootstrap": "4.5.3",
     "chalk": "4.1.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-react-hooks": "4.1.0",
     "fontfaceobserver": "2.1.0",
     "formik": "2.2.6",
+    "framer-motion": "4.1.3",
     "husky": "4.2.5",
     "i18next": "19.7.0",
     "i18next-browser-languagedetector": "6.0.1",
