--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,8 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_FORM_API=https://formspree.io/f/mgepdbrn
+REACT_APP_FIREAPIKEY=AIzaSyDLjml8g98cciBRa0GzvWccYTMlgFoDxUI
+REACT_APP_AUTHDOMAIN=birbackend.firebaseapp.com
+REACT_APP_PROJECTID=birbackend
+REACT_APP_STORAGE_BUCKET=birbackend.appspot.com
+REACT_APP_MESSAGESENDING_ID=906985649022
+REACT_APP_APPID=1:906985649022:web:5e45265a3d9198178f792f
