--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
+.env.production
 
 # boilerplate internals
 generated-cra-app
